--- a/style.css
+++ b/style.css
@@ -42,6 +42,45 @@ canvas {
 	border: 6px solid white;
 }
 
+.myButton {
+	-moz-box-shadow: 0px 12px 14px -7px #85ddc7;
+	-webkit-box-shadow: 0px 12px 14px -7px #85ddc7;
+	box-shadow: 0px 12px 14px -7px #85ddc7;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #84ddc7), color-stop(1, #85ddc7));
+	background:-moz-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
+	background:-webkit-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
+	background:-o-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
+	background:-ms-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
+	background:linear-gradient(to bottom, #84ddc7 5%, #85ddc7 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#84ddc7', endColorstr='#85ddc7',GradientType=0);
+	background-color:#84ddc7;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:4px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Verdana;
+	font-size:25px;
+	padding:13px 38px;
+	text-decoration:none;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #85ddc7), color-stop(1, #84ddc7));
+	background:-moz-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
+	background:-webkit-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
+	background:-o-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
+	background:-ms-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
+	background:linear-gradient(to bottom, #85ddc7 5%, #84ddc7 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#85ddc7', endColorstr='#84ddc7',GradientType=0);
+	background-color:#85ddc7;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+
 
 
 
