--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@ body {
 
 div.theMenu {
 	background: #FFFFFF;
-	width: 1000px;
+	width: 1050px;
 	height: 500px;
-	right: 1px;
+	right: 195px;
 	z-index: 10;
 	top: 50px;
 	position: fixed;
+}
+
+p.menuText {
+	color: #8E8E8E;
+	top: 100px;
 }
 
 h1 {
@@ -42,7 +47,7 @@ canvas {
 	border: 6px solid white;
 }
 
-.myButton {
+.startBtn {
 	-moz-box-shadow: 0px 12px 14px -7px #85ddc7;
 	-webkit-box-shadow: 0px 12px 14px -7px #85ddc7;
 	box-shadow: 0px 12px 14px -7px #85ddc7;
@@ -65,7 +70,7 @@ canvas {
 	padding:13px 38px;
 	text-decoration:none;
 }
-.myButton:hover {
+.startBtn:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #85ddc7), color-stop(1, #84ddc7));
 	background:-moz-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
 	background:-webkit-linear-gradient(top, #85ddc7 5%, #84ddc7 100%);
@@ -75,7 +80,7 @@ canvas {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#85ddc7', endColorstr='#84ddc7',GradientType=0);
 	background-color:#85ddc7;
 }
-.myButton:active {
+.startBtn:active {
 	position:relative;
 	top:1px;
 }
