--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
 	background: #85DDC7;
 	text-align: center;
+	font-family:'Open Sans Condensed', sans-serif;
 }
 
 div.theMenu {
@@ -13,11 +14,13 @@ div.theMenu {
 	z-index: 10;
 	top: 50px;
 	position: fixed;
+	font-family:'Open Sans Condensed', sans-serif;
 }
 
 p.menuText {
 	color: #8E8E8E;
 	top: 100px;
+	font-family:'Open Sans Condensed', sans-serif;
 }
 
 h1 {
@@ -48,24 +51,14 @@ canvas {
 }
 
 .startBtn {
-	-moz-box-shadow: 0px 12px 14px -7px #85ddc7;
-	-webkit-box-shadow: 0px 12px 14px -7px #85ddc7;
-	box-shadow: 0px 12px 14px -7px #85ddc7;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #84ddc7), color-stop(1, #85ddc7));
-	background:-moz-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
-	background:-webkit-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
-	background:-o-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
-	background:-ms-linear-gradient(top, #84ddc7 5%, #85ddc7 100%);
-	background:linear-gradient(to bottom, #84ddc7 5%, #85ddc7 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#84ddc7', endColorstr='#85ddc7',GradientType=0);
 	background-color:#84ddc7;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
 	border-radius:4px;
+	border:0px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:'Open Sans Condensed', sans-serif;
 	font-size:25px;
 	padding:13px 38px;
 	text-decoration:none;
