--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.theMenu {
 	height: 500px;
 	right: 195px;
 	z-index: 10;
-	top: 50px;
+	top: 97px;
 	position: fixed;
 	font-family:'Open Sans Condensed', sans-serif;
 }
@@ -32,13 +32,19 @@ p.menuText {
 	color: #8E8E8E;
 	top: 100px;
 	font-family:'Open Sans Condensed', sans-serif;
+	text-align: center; 
 }
 
 h1 {
+	top: 30px;
+	display: inline-block;
 	text-transform: uppercase;
-	text-align: 	center;
-	text-indent: 	70px;
 	color: 			#85DDC7;
+}
+
+h6 {
+	color: #85DDC7;
+	opacity: 100%;
 }
 
 
